# sewer-pipe-anomaly-detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: train_autoencoder.yaml  train_autoencoder_normal_smoke.yaml  train_autoencoder_smoke.yaml
scripts/: analyze_metadata.py  evaluate_anomaly_threshold.py  evaluate_normal_only_scores.py  generate_anomaly_visualizations.py  generate_reconstruction_heatmaps.py  inspect_autoencoder.py  inspect_checkpoint_inference.py  inspect_dataloader.py  inspect_reconstruction_scores.py  prepare_dataset.py  prepare_normal_split.py  run_training_runner_smoke.py  select_anomaly_threshold.py  train_autoencoder.py  train_autoencoder_smoke.py  visualize_preprocessing.py
src/sewer_anomaly/config/: training_config.py
src/sewer_anomaly/data/: dataset.py  manifests.py  metadata.py  normal_split.py  preprocessing.py
src/sewer_anomaly/evaluation/: balanced_threshold_result.py  balanced_threshold_selector.py  threshold_evaluation_result.py  (+3 more)
tests/unit/: test_autoencoder_models.py  test_autoencoder_trainer.py  test_balanced_threshold_selector.py  test_checkpoint_loader.py  test_dataset.py  test_manifests.py  test_metadata.py  test_normal_split.py  test_package_import.py  test_precision_recall_curve_plotter.py  test_preprocessing.py  test_reconstruction_heatmap_generator.py  test_reconstruction_heatmap_plotter.py  test_reconstruction_scorer.py  test_roc_curve_plotter.py  test_score_distribution_plotter.py  test_threshold_evaluator.py  test_threshold_selector.py  test_training_config.py  test_training_runner.py
(+12 files in other folders)
