[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sewer-pipe-anomaly-detection"
version = "0.1.0"
description = "Industrial sewer pipe defect detection using convolutional autoencoders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "William Popkov" }
]

dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sewer_anomaly = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

# Torchvision does not currently provide complete type information.
[[tool.mypy.overrides]]
module = ["torchvision", "torchvision.*"]
ignore_missing_imports = true
